minor docu update
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1347147 13f79535-47bb-0310-9956-ffa450edef68

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -32,7 +32,7 @@ included with each sample.
 4. Reporting Problems
 
 If you have any problems or want to send feedback of any kind, please e-mail the
-CXF dev list, dev@cxf.apache.org.  You can also file issues in JIRA at:
+CXF user list, user@cxf.apache.org.  You can also file issues in JIRA at:
 
 http://issues.apache.org/jira/browse/FEDIZ
 
