--- a/release_notes.txt
+++ b/release_notes.txt
@@ -32,7 +32,7 @@ included with each sample.
 4. Reporting Problems
 
 If you have any problems or want to send feedback of any kind, please e-mail the
-CXF user list, user@cxf.apache.org.  You can also file issues in JIRA at:
+CXF users list, user@cxf.apache.org.  You can also file issues in JIRA at:
 
 http://issues.apache.org/jira/browse/FEDIZ
 
