--- a/release_notes.txt
+++ b/release_notes.txt
@@ -21,20 +21,26 @@ with the specified versions, are installed on your system:
     * Java 6 or 7 Development Kit
     * Apache Maven 2.2.1 or 3.x to build the samples
 
-3. Building the Samples
+3. Installation Procedures
+
+Follow the Getting Started instructions at 
+http://cxf.apache.org/fediz.html#Fediz-Gettingstarted for information
+on installing the Fediz IDP and IDP STS.
+
+4. Building the Samples
 
 Building the samples included in the binary distribution is easy. Change to
 the examples directory and follow the build instructions in the README.txt file 
 included with each sample.
 
-4. Replacing provided keystores
+5. Replacing provided keystores
 
 The sample keystores provided are fine for development and prototyping use
 but make sure to replace them for any production use, see
 see examples/samplekeys/HowToGenerateKeysREADME.html for key generation
 information.
 
-5. Reporting Problems
+6. Reporting Problems
 
 If you have any problems or want to send feedback of any kind, please e-mail the
 CXF user list, users@cxf.apache.org.  You can also file issues in JIRA at:
@@ -42,12 +48,12 @@ CXF user list, users@cxf.apache.org.  You can also file issues in JIRA at:
 http://issues.apache.org/jira/browse/FEDIZ
 
 
-6. Migration notes:
+7. Migration notes:
 
 N.A.
 
 
-7. Specific issues, features, and improvements fixed in this version
+8. Specific issues, features, and improvements fixed in this version
 
 ** Bug
 
