--- a/release_notes.txt
+++ b/release_notes.txt
@@ -95,6 +95,7 @@ Improvement
     [FEDIZ-48] - Support wfresh properly in the IdP
     [FEDIZ-54] - Provide Maven profile to build STS with LDAP backend
     [FEDIZ-64] - Add Callback support for the Realm (WTRealm) protocol property
+    [FEDIZ-66] - Token expiration validation configurable
 
 Wish
 
