--- a/release_notes.txt
+++ b/release_notes.txt
@@ -66,6 +66,14 @@ N.A.
 
 8. Specific issues, features, and improvements fixed in this version
 
+Release Notes - CXF-Fediz - Version 1.5.1
+
+Improvement
+
+    [FEDIZ-251] - Support SAML token signature without KeyInfo
+    [FEDIZ-252] - Extend 'signinQuery' functionality to SAML SSO protocol
+
+
 Release Notes - CXF-Fediz - Version 1.5.0
 
 Bug
